[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Fonts/CaslonAntique.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://UI/Menu/OptionsMenu/SubOptions/SubOptionsVideo/Sub_Options_Video.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=4]
size = 13
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="Sub_Options_Video" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Sub_Options_Video_Buttons" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -373.0
margin_top = -180.0
margin_bottom = 180.0
custom_constants/separation = 75

[node name="MasterVolumeMarginContainer" type="MarginContainer" parent="Sub_Options_Video_Buttons"]
margin_right = 373.0
margin_bottom = 144.0
custom_constants/margin_top = 120
custom_constants/margin_left = 80

[node name="MasterVolumeHBoxContainer" type="HBoxContainer" parent="Sub_Options_Video_Buttons/MasterVolumeMarginContainer"]
margin_left = 80.0
margin_top = 120.0
margin_right = 373.0
margin_bottom = 144.0

[node name="Master_Volume_Label" type="VBoxContainer" parent="Sub_Options_Video_Buttons/MasterVolumeMarginContainer/MasterVolumeHBoxContainer"]
margin_right = 51.0
margin_bottom = 24.0

[node name="MasterMarginContainer" type="MarginContainer" parent="Sub_Options_Video_Buttons/MasterVolumeMarginContainer/MasterVolumeHBoxContainer/Master_Volume_Label"]
margin_right = 51.0
margin_bottom = 21.0
custom_constants/margin_right = 7
custom_constants/margin_top = 4

[node name="MasterVolume" type="Label" parent="Sub_Options_Video_Buttons/MasterVolumeMarginContainer/MasterVolumeHBoxContainer/Master_Volume_Label/MasterMarginContainer"]
margin_top = 4.0
margin_right = 44.0
margin_bottom = 21.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Borderless"
align = 1
valign = 1

[node name="Master_Volume_Slider_Container" type="VBoxContainer" parent="Sub_Options_Video_Buttons/MasterVolumeMarginContainer/MasterVolumeHBoxContainer"]
margin_left = 55.0
margin_right = 137.0
margin_bottom = 24.0
alignment = 1

[node name="MasterMarginContainer" type="MarginContainer" parent="Sub_Options_Video_Buttons/MasterVolumeMarginContainer/MasterVolumeHBoxContainer/Master_Volume_Slider_Container"]
margin_right = 82.0
margin_bottom = 24.0
custom_constants/margin_left = 58

[node name="FullScreenCheckbox" type="CheckBox" parent="Sub_Options_Video_Buttons/MasterVolumeMarginContainer/MasterVolumeHBoxContainer/Master_Volume_Slider_Container/MasterMarginContainer"]
margin_left = 58.0
margin_right = 82.0
margin_bottom = 24.0
align = 1
icon_align = 1

[connection signal="toggled" from="Sub_Options_Video_Buttons/MasterVolumeMarginContainer/MasterVolumeHBoxContainer/Master_Volume_Slider_Container/MasterMarginContainer/FullScreenCheckbox" to="." method="_on_FullScreenCheckbox_toggled"]
